--- a/drupal_hero_theme/drupal_hero_theme.libraries.yml
+++ b/drupal_hero_theme/drupal_hero_theme.libraries.yml
@@ -1,13 +1,15 @@
 global-css:
   version: 1.0
   css:
+    base:
+      css/base.css: {}
     theme:
-      css/styles.css: {}  
+      css/theme.css: {}  
 
 fonts:
   css:
     theme:
-      '//fonts.googleapis.com/css?family=Permanent+Marker|Roboto:400,400i,700,700i': { type: external, minified: true }
+      '//fonts.googleapis.com/css?family=Permanent+Marker|family=Lato:300,400,700,700i': { type: external, minified: true }
 
 global-js:
   js:
